resolved main content layout issue with img{width: 100%} (100% of container)

--- a/less/index.less
+++ b/less/index.less
@@ -113,6 +113,10 @@ body{
 
     .content-item{
       padding: 30px 5% 30px 5%;
+      
+      img{
+        width: 100%;
+      }
     }
   }
 
@@ -120,6 +124,10 @@ body{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+
+    h3{ 
+      margin-bottom: 20px;
+    }
 
     .special-img{
       position: relative;
